fixed bug when margin would not be good on mobile for the skills and experience component

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1169,6 +1169,10 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.px-\[10\]{
+  padding-left: 10;
+  padding-right: 10;
+}
 .pt-56{
   padding-top: 14rem;
 }
@@ -2191,6 +2195,16 @@ video {
   .max-sm\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .max-sm\:px-\[\]{
+    padding-left: ;
+    padding-right: ;
+  }
+
+  .max-sm\:px-\[5\]{
+    padding-left: 5;
+    padding-right: 5;
   }
 
   .max-sm\:pt-44{
